# KasperskyOS_ARCS

./: README.md
KOS_GPIO/: CMakeLists.txt  cross-build.sh  image-build.sh  mount-image.sh
KOS_GPIO/client/: CMakeLists.txt
KOS_GPIO/client/src/: main.cpp
KOS_TCP-IP/: CMakeLists.txt  cross-build.sh
KOS_TCP-IP/client/: CMakeLists.txt
KOS_TCP-IP/client/src/: client.cpp
KOS_TCP-IP/einit/: CMakeLists.txt
KOS_TCP-IP/einit/src/: init.yaml.in  security.psl
KOS_TCP-IP/env/src/: env.c
KOS_TCP-IP/server/: CMakeLists.txt
KOS_TCP-IP/server/src/: server.cpp
server/: server.cpp
